started with js

--- a/p5js/Drawbot_image_to_gcode_v2_p5js/index.html
+++ b/p5js/Drawbot_image_to_gcode_v2_p5js/index.html
@@ -5,6 +5,14 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+  <script language="javascript" type="text/javascript" src="BotDrawing.js"></script>
+  <script language="javascript" type="text/javascript" src="BotLine.js"></script>
+  <script language="javascript" type="text/javascript" src="Bresenham.js"></script>
+  <script language="javascript" type="text/javascript" src="Gcode.js"></script>
+  <script language="javascript" type="text/javascript" src="Image_Tools.js"></script>
+  <script language="javascript" type="text/javascript" src="Misc.js"></script>
+  <script language="javascript" type="text/javascript" src="PFM_original.js"></script>
+  <script language="javascript" type="text/javascript" src="PFM_squares.js"></script>
   <script language="javascript" type="text/javascript" src="Drawbot_image_to_gcode_v2_p5js.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
